--- a/web/public/index.html
+++ b/web/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=3" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon16x16.ico?v=4" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#3B4353" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -14,6 +14,10 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--ios support-->
+    <!-- <link rel="apple-touch-icon"  /> -->
+    <meta name="apple-mobile-web-app-status-bar" content="#3B4353" />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""
@@ -27,7 +31,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>OffCmpus</title>
+    <title>offcmpus</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
